# gst-plugin-dvbmediasink

./: Makefile.am  common.c  common.h  configure.ac  gst-plugin-dvbmediasink.bb  gstdtsdownmix.c  gstdtsdownmix.h  gstdvbaudiosink.c  gstdvbaudiosink.h  gstdvbvideosink.c  gstdvbvideosink.h  gstmpeg4p2unpack.c  gstmpeg4p2unpack.h
m4/: as-version.m4
